fixed timer spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ div:empty {
 }
 
 .timer {
-    margin-bottom: 40px;
+    margin-bottom: 50px;
     height: 30px;
 }
 }
